--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = c:\users\nabagato\appdata\local\programs\python\python39
+home = c:\users\django\appdata\local\programs\python\python39
 implementation = CPython
 version_info = 3.9.2.final.0
 virtualenv = 20.4.3
 include-system-site-packages = false
-base-prefix = c:\users\nabagato\appdata\local\programs\python\python39
-base-exec-prefix = c:\users\nabagato\appdata\local\programs\python\python39
-base-executable = c:\users\nabagato\appdata\local\programs\python\python39\python.exe
+base-prefix = c:\users\django\appdata\local\programs\python\python39
+base-exec-prefix = c:\users\django\appdata\local\programs\python\python39
+base-executable = c:\users\django\appdata\local\programs\python\python39\python.exe
